<resources>
    <string name="app_name">Woord stappen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Alfabet oefenen</string>
    <string name="secondnext">Zinnen oefenen</string>
    <string name="previous">Previous</string>
    <string name="first_choice">Alfabet oefenen</string>
    <string name="second_choice">Zinnen oefenen</string>
    <string name="fourth_choice">Woorden oefenen</string>
    <string name="third_choice">Volgende</string>

    <string name="hello_first_fragment">Welkom(gebruikersnaam)</string>
    <string name="hello_second_fragment">Welkom(gebruiksnaam). Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo"> </string>
    <string name="second_todo">TODO</string>
    <string name="text_view_third">Schrijf de zinnen hieronder over</string>
    <string name="zinnen"> De kat krabt de krullen van de trap.</string>
    <string name="todo4">TODO</string>
    <string name="text_page2">Schrijf de letter zoals hieronder aangegeven</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="text_page5">Schrijf het woord zo netjes mogelijk</string>
    <string name="base_question_woorden">Hoogbouw</string>
    <string name="woordenpicture">TODO</string>
    <!-- Strings related to login -->
    <string name="prompt_User">Gebruiksnaam</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inlog_kansen">Inlog kansen:</string>
    <string name="title_activity_mainmenuactivity">mainmenuactivity</string>
    <string name="title_activity_alfabetactivity">alfabetactivity</string>
    <string name="title_activity_zinnenactivity">zinnenactivity</string>
    <string name="title_activity_woordenactivity">woordenactivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="text_to_change">text_to_change</string>
    <string name="change_text">change_text</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="volgende">Volgende</string>
    <string name="start">Start</string>
    <string name="score">Score:</string>
    <string name="todo22">TODO</string>
    <string name="levens">Levens:</string>
    <string name="_3">3</string>
</resources>